# Hamil

./: .gitignore  CMakeLists.txt  Hamil.sln  README.md  TODO.md  oglTest.sln
Hamil/: CMakeLists.txt  Hamil.vcxproj  README.md  build.eugene  cpp.hint
Hamil/config/: config.h.in
Hamil/include/: common.h
Hamil/include/bt/: btcommon.h  bullet.h  collisionshape.h  ray.h  rigidbody.h  world.h
Hamil/include/cli/: resourcegen.h
Hamil/include/ek/: constbuffer.h  euklid.h  mempool.h  occlusion.h  renderer.h  renderobject.h  rendertarget.h  renderview.h  sharedobject.h  visibility.h  visobject.h
Hamil/include/ft/: font.h
Hamil/include/game/: componentref.h  componentstore.h  game.h
Hamil/include/game/components/: all.h  gameobject.h
Hamil/include/gx/: buffer.h  commandbuffer.h  context.h  fence.h  framebuffer.h  gx.h  info.h  memorypool.h  pipeline.h  program.h  query.h  renderpass.h  resourcepool.h  texture.h  vertex.h
Hamil/include/hm/: cachedprototype.h  chunkhandle.h  chunkman.h  cmdline.h  component.h  componentman.h  componentmeta.h  componentref.h  componentstore.h  entity.h  entityman.h  entityquery.h  hamil.h  prototype.h  prototypecache.h  prototypechunk.h  queryparams.h  world.h
Hamil/include/hm/components/: all.h  gameobject.h  hull.h  light.h  material.h  mesh.h  model.h  rigidbody.h  transform.h  visibility.h
Hamil/include/math/: brdf.h  compare.h  frustum.h  geometry.h  intrin.h  intrin.hh  ltc.h  neldermead.h  quaternion.h  transform.h  util.h  xform.h
Hamil/include/mesh/: halfedge.h  loader.h  mesh.h  obj.h  util.h
Hamil/include/os/: clipboard.h  conditionvar.h  cpuid.h  cpuinfo.h  error.h  file.h  glcontext.h  input.h  inputman.h  mutex.h  os.h  panic.h  path.h  rwlock.h  stdstream.h  thread.h  time.h  waitable.h  window.h
Hamil/include/py/: exception.h  module.h  object.h  types.h
Hamil/include/py/modules/: btmodule.h  hmmodule.h  mathmodule.h  win32module.h
Hamil/include/res/: cache.h  handle.h  image.h  io.h  loader.h  lut.h  manager.h  mesh.h  res.h  resource.h  shader.h  text.h  texture.h
Hamil/include/sched/: job.h  pool.h  scheduler.h
Hamil/include/sysv/: clipboard.h  conditionvar.h  cpuid.h  cpuinfo.h  file.h  glcontext.h  inputman.h  mutex.h  panic.h  rwlock.h  stdstream.h  sysv.h  thread.h  time.h  window.h  x11.h
Hamil/include/ui/: animation.h  button.h  console.h  cursor.h  drawable.h  dropdown.h  event.h  frame.h  label.h  painter.h  scrollframe.h  slider.h  style.h  textbox.h  ui.h  uicommon.h  window.h
Hamil/include/util/: abstracttuple.h  allocator.h  bit.h  bitvector.h  dds.h  fixedbitvector.h  fixedbitvector.hh  format.h  hash.h  hashindex.h  lambdatraits.h  passkey.h  polystorage.h  ref.h  ringbuffer.h  simd.h  smallvector.h  staticstring.h  str.h  structpack.h  tupleindex.h  unit.h  wideint.h
Hamil/include/win32/: clipboard.h  conditionvar.h  cpuid.h  cpuinfo.h  event.h  file.h  glcontext.h  handle.h  input.h  inputman.h  mutex.h  panic.h  rwlock.h  stdstream.h  thread.h  time.h  waitable.h  win32.h  window.h
Hamil/include/yaml/: document.h  node.h  schema.h
Hamil/src/: CMakeLists.txt  program.uniform  programs.cpp  sysvmain.cpp  winmain.cpp
Hamil/src/bt/: bullet.cpp  collisionshape.cpp  ray.cpp  rigidbody.cpp  world.cpp
Hamil/src/cli/: cli.cpp  resourcegen.cpp
Hamil/src/ek/: constbuffer.cpp  euklid.cpp  mempool.cpp  occlusion.cpp  renderer.cpp  renderobject.cpp  rendertarget.cpp  renderview.cpp  sharedobject.cpp  visibility.cpp  visobject.cpp
Hamil/src/ft/: font.cpp  gxuniforms.cpp
Hamil/src/game/: cmdline.cpp  component.cpp  componentman.cpp  componentref.cpp  entity.cpp  game.cpp
Hamil/src/gx/: buffer.cpp  commandbuffer.cpp  context.cpp  fence.cpp  framebuffer.cpp  gx.cpp  info.cpp  memorypool.cpp  pipeline.cpp  program.cpp  query.cpp  renderpass.cpp  resourcepool.cpp  texture.cpp  vertex.cpp
Hamil/src/hm/: cachedprototype.cpp  chunkhandle.cpp  chunkman.cpp  cmdline.cpp  component.cpp  componentman.cpp  componentmeta.cpp  componentref.cpp  componentstore.cpp  entity.cpp  entityman.cpp  entityquery.cpp  hamil.cpp  prototype.cpp  prototypecache.cpp  prototypechunk.cpp  queryparams.cpp  world.cpp
Hamil/src/hm/components/: gameobject.cpp  hull.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  rigidbody.cpp  transform.cpp  visibility.cpp
Hamil/src/math/: brdf.cpp  compare.cpp  frustum.cpp  intrin.cpp  ltc.cpp  quaternion.cpp  transform.cpp  util.cpp  xform.cpp
Hamil/src/mesh/: halfedge.cpp  loader.cpp  mesh.cpp  obj.cpp  util.cpp
Hamil/src/os/: clipboard.cpp  conditionvar.cpp  cpuid.cpp  cpuinfo.cpp  error.cpp  file.cpp  glcontext.cpp  input.cpp  inputman.cpp  mutex.cpp  os.cpp  panic.cpp  path.cpp  rwlock.cpp  stdstream.cpp  thread.cpp  time.cpp  waitable.cpp  window.cpp
Hamil/src/py/: collections.cpp  exception.cpp  module.cpp  object.cpp  python.cpp  types.cpp
Hamil/src/py/modules/: btmodule.cpp  hmmodule.cpp  mathmodule.cpp  resmodule.cpp  win32module.cpp  (+1 more)
Hamil/src/res/: cache.cpp  handle.cpp  image.cpp  io.cpp  loader.cpp  lut.cpp  manager.cpp  mesh.cpp  res.cpp  shader.cpp  text.cpp  texture.cpp
Hamil/src/sched/: job.cpp  pool.cpp  scheduler.cpp
Hamil/src/sysv/: clipboard.cpp  conditionvar.cpp  cpuid.cpp  cpuinfo.cpp  file.cpp  glcontext.cpp  inputman.cpp  mutex.cpp  panic.cpp  rwlock.cpp  stdstream.cpp  sysv.cpp  thread.cpp  time.cpp  window.cpp  x11.cpp
Hamil/src/ui/: animation.cpp  button.cpp  console.cpp  cursor.cpp  drawable.cpp  dropdown.cpp  event.cpp  frame.cpp  label.cpp  layout.cpp  painter.cpp  scrollframe.cpp  slider.cpp  style.cpp  textbox.cpp  ui.cpp  uicommon.cpp  window.cpp
Hamil/src/util/: allocator.cpp  bitvector.cpp  dds.cpp  fixedbitvector.cpp  format.cpp  hashindex.cpp  opts.cpp  polystorage.cpp  ref.cpp  staticstring.cpp  str.cpp  unit.cpp
Hamil/src/win32/: clipboard.cpp  conditionvar.cpp  cpuid.cpp  cpuinfo.cpp  event.cpp  file.cpp  glcontext.cpp  handle.cpp  input.cpp  inputman.cpp  mman.cpp  mutex.cpp  panic.cpp  rwlock.cpp  stdstream.cpp  thread.cpp  time.cpp  waitable.cpp  win32.cpp  window.cpp
Hamil/src/yaml/: document.cpp  node.cpp
(+294 files in other folders)
